tests/golden/reject/fallthrough_outside_switch.goo
// P1.7 reject: `fallthrough` with no enclosing switch at all. Must be a
// clean, positioned type error, never a codegen crash.
package main

func main() {
	fallthrough
}
